# 2d_physics

./: .gitignore  .gitmodules  CMakeLists.txt  README  main.cpp
core/: CollisionDescription.h  Force.cpp  Force.h  Object.cpp  Object.h  Scene.h  Shape.cpp  Shape.h  Transform.cpp  Transform.h  Types.h
sim/: CollisionDetector.cpp  CollisionDetector.h  CollisionHandler.cpp  CollisionHandler.h  SimpleSim.cpp  SimpleSim.h
tests/: CollisionDetector.cpp  CollisionHandler.cpp  StateIntegrationTest.cpp
ui/: CliUI.cpp  CliUI.h  NanaGui.cpp  NanaGui.h
